# convenient_search_2

./: README.md  pyproject.toml
data/: vacancies.json
src/: hh_api.py  json_saver.py  main.py  vacancy.py
tests/: test_json_server.py  test_vacancy.py
