[tool.poetry]
name = "project_folder_2"
version = "0.1.0"
description = ""
authors = ["viktor_klimanov <viktor.klimanov.2017@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
